This is actually working

--- a/index.html
+++ b/index.html
@@ -1,8 +1,53 @@
 <!DOCTYPE html>
+<!--
+<html>
+    <head> 
+        <title>Mage Theorycrafting</title>
+        <link href="Styles/main.css" rel="stylesheet" type="text/css" />
+    </head>
+    
 
-<htlm>
-<body>
-This website was created in order to provide the Mage Community with a organised view of the Simulation Craft dump threads originally hosted on Altered-time.
-</body>
+<img id="Banner" src="https://i.imgur.com/gDU2uHv.png">
 
-</htlm>
+    <body>
+        <p>This website was created in order to provide the Mage Community with a organised view of the Simulation Craft dump threads originally hosted on Altered-time. </p>
+        <p> Please view the main respository  <a href="https://github.com/Glynnyx/Mage-tc" target="_blank">here:</a></p>   
+
+        <section>
+            <h1>Table of contents:</h1>
+                 <ul>
+                     <li>Item 1</li>
+                     <li>Item 2</li>
+                     <li>Item 3</li>
+                 </ul>
+        </section>
+    </body>
+</html>
+-->
+
+<html>
+    <link href="styles/main.css" rel="stylesheet">
+    <ul>
+        <li><a>Fire</a>
+            <ul>
+                <li><a>Single</a></li>
+                <li><a>Two</a></li>
+                <li><a>Four</a></li>
+            </ul>
+        </li>
+        <li><a>Frost</a>
+            <ul>
+                <li><a>Single</a></li>
+                <li><a>Two</a></li>
+                <li><a>Four</a></li>
+            </ul>       
+        <li><a>Arcane</a>
+            <ul>
+                <li><a>Single</a></li>
+                <li><a>Two</a></li>
+                <li><a>Four</a></li>
+            </ul>
+        </li>
+    </ul>
+</html>
+
