Please work on github

--- a/index.html
+++ b/index.html
@@ -1,51 +1,98 @@
 <!DOCTYPE html>
-<!--
-<html>
-    <head> 
-        <title>Mage Theorycrafting</title>
-        <link href="Styles/main.css" rel="stylesheet" type="text/css" />
-    </head>
-    
-
-<img id="Banner" src="https://i.imgur.com/gDU2uHv.png">
-
-    <body>
-        <p>This website was created in order to provide the Mage Community with a organised view of the Simulation Craft dump threads originally hosted on Altered-time. </p>
-        <p> Please view the main respository  <a href="https://github.com/Glynnyx/Mage-tc" target="_blank">here:</a></p>   
-
-        <section>
-            <h1>Table of contents:</h1>
-                 <ul>
-                     <li>Item 1</li>
-                     <li>Item 2</li>
-                     <li>Item 3</li>
-                 </ul>
-        </section>
-    </body>
-</html>
--->
-
 <html>
     <link href="styles/main.css" rel="stylesheet">
     <ul>
-        <li><a>Fire</a>
+        <li id="MainHeader"><a>Fire</a>
             <ul>
-                <li><a>Single</a></li>
-                <li><a>Two</a></li>
-                <li><a>Four</a></li>
+                <li id="SubHeader"><a>Single</a>
+                    <ul>
+                        <li id="SubHeaderHeader"><a>Talents</a></li>
+                        <li id="SubHeaderHeader"><a>Weights</a></li>
+                        <li id="SubHeaderHeader"><a>Azerite</a></li>
+                        <li id="SubHeaderHeader"><a>Weapon Enchants</a></li>
+                        <li id="SubHeaderHeader"><a>Stats</a></li>
+                    </ul>
+                </li>
+                <li id="SubHeader"><a>Two</a>
+                    <ul>
+                        <li id="SubHeaderHeader"><a>Talents</a></li>
+                        <li id="SubHeaderHeader"><a>Weights</a></li>
+                        <li id="SubHeaderHeader"><a>Azerite</a></li>
+                        <li id="SubHeaderHeader"><a>Weapon Enchants</a></li>
+                        <li id="SubHeaderHeader"><a>Stats</a></li>
+                    </ul>
+                </li>
+                <li id="SubHeader"><a>Four</a>
+                    <ul>
+                        <li id="SubHeaderHeader"><a>Talents</a></li>
+                        <li id="SubHeaderHeader"><a>Weights</a></li>
+                        <li id="SubHeaderHeader"><a>Azerite</a></li>
+                        <li id="SubHeaderHeader"><a>Weapon Enchants</a></li>
+                        <li id="SubHeaderHeader"><a>Stats</a></li>
+                    </ul>
+                </li>
             </ul>
         </li>
-        <li><a>Frost</a>
+        <li id="MainHeader"><a>Frost</a>
             <ul>
-                <li><a>Single</a></li>
-                <li><a>Two</a></li>
-                <li><a>Four</a></li>
-            </ul>       
-        <li><a>Arcane</a>
+                <li id="SubHeader"><a>Single</a>
+                    <ul>
+                        <li id="SubHeaderHeader"><a>Talents</a></li>
+                        <li id="SubHeaderHeader"><a>Weights</a></li>
+                        <li id="SubHeaderHeader"><a>Azerite</a></li>
+                        <li id="SubHeaderHeader"><a>Weapon Enchants</a></li>
+                        <li id="SubHeaderHeader"><a>Stats</a></li>
+                    </ul>
+                </li>
+                <li id="SubHeader"><a>Two</a>
+                    <ul>
+                        <li id="SubHeaderHeader"><a>Talents</a></li>
+                        <li id="SubHeaderHeader"><a>Weights</a></li>
+                        <li id="SubHeaderHeader"><a>Azerite</a></li>
+                        <li id="SubHeaderHeader"><a>Weapon Enchants</a></li>
+                        <li id="SubHeaderHeader"><a>Stats</a></li>
+                    </ul>
+                </li>
+                <li id="SubHeader"><a>Four</a>
+                    <ul>
+                        <li id="SubHeaderHeader"><a>Talents</a></li>
+                        <li id="SubHeaderHeader"><a>Weights</a></li>
+                        <li id="SubHeaderHeader"><a>Azerite</a></li>
+                        <li id="SubHeaderHeader"><a>Weapon Enchants</a></li>
+                        <li id="SubHeaderHeader"><a>Stats</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li id="MainHeaderLeft"><a>Fire</a>
             <ul>
-                <li><a>Single</a></li>
-                <li><a>Two</a></li>
-                <li><a>Four</a></li>
+                <li id="SubHeaderLeft"><a>Single</a>
+                    <ul>
+                        <li id="SubHeaderHeaderLeft"><a>Talents</a></li>
+                        <li id="SubHeaderHeaderLeft"><a>Weights</a></li>
+                        <li id="SubHeaderHeaderLeft"><a>Azerite</a></li>
+                        <li id="SubHeaderHeaderLeft"><a>Weapon Enchants</a></li>
+                        <li id="SubHeaderHeaderLeft"><a>Stats</a></li>
+                    </ul>
+                </li>
+                <li id="SubHeaderLeft"><a>Two</a>
+                    <ul>
+                        <li id="SubHeaderHeaderLeft"><a>Talents</a></li>
+                        <li id="SubHeaderHeaderLeft"><a>Weights</a></li>
+                        <li id="SubHeaderHeaderLeft"><a>Azerite</a></li>
+                        <li id="SubHeaderHeaderLeft"><a>Weapon Enchants</a></li>
+                        <li id="SubHeaderHeaderLeft"><a>Stats</a></li>
+                    </ul>
+                </li>
+                <li id="SubHeaderLeft"><a>Four</a>
+                    <ul>
+                        <li id="SubHeaderHeaderLeft"><a>Talents</a></li>
+                        <li id="SubHeaderHeaderLeft"><a>Weights</a></li>
+                        <li id="SubHeaderHeaderLeft"><a>Azerite</a></li>
+                        <li id="SubHeaderHeaderLeft"><a>Weapon Enchants</a></li>
+                        <li id="SubHeaderHeaderLeft"><a>Stats</a></li>
+                    </ul>
+                </li>
             </ul>
         </li>
     </ul>
