pls work on git for now

--- a/index.html
+++ b/index.html
@@ -1,100 +1,106 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
-    <link href="styles/main.css" rel="stylesheet">
-    <ul>
-        <li id="MainHeader"><a>Fire</a>
+    <head>
+        <link href="styles/main.css" rel="stylesheet">
+        <title>Mage Theorycrafting</title>
+        <!-- Bootstrap.css
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    </head>
+
+    <body>
+        <nav class="nav-main">
+            <div class="logo">Mage Theorycrafting</div>
             <ul>
-                <li id="SubHeader"><a>Single</a>
-                    <ul>
-                        <li id="SubHeaderHeader"><a>Talents</a></li>
-                        <li id="SubHeaderHeader"><a>Weights</a></li>
-                        <li id="SubHeaderHeader"><a>Azerite</a></li>
-                        <li id="SubHeaderHeader"><a>Weapon Enchants</a></li>
-                        <li id="SubHeaderHeader"><a>Stats</a></li>
-                    </ul>
+                <li>
+                    <a href="#" class="nav-item">Fire</a>
+                    <div class="nav-content">
+                        <div class="nav-sub">
+                            <ul>
+                                <li><a href="#">Single</a></li>
+                                <li><a href="#">Two</a></li>
+                                <li><a href="#">Four</a></li>
+                            </ul>
+                        </div>
+                    </div>
                 </li>
-                <li id="SubHeader"><a>Two</a>
-                    <ul>
-                        <li id="SubHeaderHeader"><a>Talents</a></li>
-                        <li id="SubHeaderHeader"><a>Weights</a></li>
-                        <li id="SubHeaderHeader"><a>Azerite</a></li>
-                        <li id="SubHeaderHeader"><a>Weapon Enchants</a></li>
-                        <li id="SubHeaderHeader"><a>Stats</a></li>
-                    </ul>
-                </li>
-                <li id="SubHeader"><a>Four</a>
-                    <ul>
-                        <li id="SubHeaderHeader"><a>Talents</a></li>
-                        <li id="SubHeaderHeader"><a>Weights</a></li>
-                        <li id="SubHeaderHeader"><a>Azerite</a></li>
-                        <li id="SubHeaderHeader"><a>Weapon Enchants</a></li>
-                        <li id="SubHeaderHeader"><a>Stats</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-        <li id="MainHeader"><a>Frost</a>
-            <ul>
-                <li id="SubHeader"><a>Single</a>
-                    <ul>
-                        <li id="SubHeaderHeader"><a>Talents</a></li>
-                        <li id="SubHeaderHeader"><a>Weights</a></li>
-                        <li id="SubHeaderHeader"><a>Azerite</a></li>
-                        <li id="SubHeaderHeader"><a>Weapon Enchants</a></li>
-                        <li id="SubHeaderHeader"><a>Stats</a></li>
-                    </ul>
-                </li>
-                <li id="SubHeader"><a>Two</a>
-                    <ul>
-                        <li id="SubHeaderHeader"><a>Talents</a></li>
-                        <li id="SubHeaderHeader"><a>Weights</a></li>
-                        <li id="SubHeaderHeader"><a>Azerite</a></li>
-                        <li id="SubHeaderHeader"><a>Weapon Enchants</a></li>
-                        <li id="SubHeaderHeader"><a>Stats</a></li>
-                    </ul>
-                </li>
-                <li id="SubHeader"><a>Four</a>
-                    <ul>
-                        <li id="SubHeaderHeader"><a>Talents</a></li>
-                        <li id="SubHeaderHeader"><a>Weights</a></li>
-                        <li id="SubHeaderHeader"><a>Azerite</a></li>
-                        <li id="SubHeaderHeader"><a>Weapon Enchants</a></li>
-                        <li id="SubHeaderHeader"><a>Stats</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-        <li id="MainHeaderLeft"><a>Fire</a>
-            <ul>
-                <li id="SubHeaderLeft"><a>Single</a>
-                    <ul>
-                        <li id="SubHeaderHeaderLeft"><a>Talents</a></li>
-                        <li id="SubHeaderHeaderLeft"><a>Weights</a></li>
-                        <li id="SubHeaderHeaderLeft"><a>Azerite</a></li>
-                        <li id="SubHeaderHeaderLeft"><a>Weapon Enchants</a></li>
-                        <li id="SubHeaderHeaderLeft"><a>Stats</a></li>
-                    </ul>
-                </li>
-                <li id="SubHeaderLeft"><a>Two</a>
-                    <ul>
-                        <li id="SubHeaderHeaderLeft"><a>Talents</a></li>
-                        <li id="SubHeaderHeaderLeft"><a>Weights</a></li>
-                        <li id="SubHeaderHeaderLeft"><a>Azerite</a></li>
-                        <li id="SubHeaderHeaderLeft"><a>Weapon Enchants</a></li>
-                        <li id="SubHeaderHeaderLeft"><a>Stats</a></li>
-                    </ul>
-                </li>
-                <li id="SubHeaderLeft"><a>Four</a>
-                    <ul>
-                        <li id="SubHeaderHeaderLeft"><a>Talents</a></li>
-                        <li id="SubHeaderHeaderLeft"><a>Weights</a></li>
-                        <li id="SubHeaderHeaderLeft"><a>Azerite</a></li>
-                        <li id="SubHeaderHeaderLeft"><a>Weapon Enchants</a></li>
-                        <li id="SubHeaderHeaderLeft"><a>Stats</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-    </ul>
+        </nav>
+        <div class="content">
+            This is a test
+        </div>
+    </body>
+</html> --!>
+
+<!doctype html>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <!-- Custom CSS-->
+    <link rel="stylesheet" href="Styles/mains.css">
+
+    <title>Amanda Smells</title>
+</head>
+
+<body>
+    <div>
+
+
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Mage Theorycrafting</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Fire</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Frost</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Arcane</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0 float-right">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+
+        <div class="tab-content" id="myTabContent">
+            <div class="jumbotron tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                    <p class="lead">Below is a list of all Fire Simulations that were ran on 01/01/2018. All of the HTML files generated can be found 
+                            <a href="https://www.youtube.com/" target="_blank">here</a></p>
+            </div>
+            <div class="jumbotron tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                    <p class="lead">Below is a list of all Frost Simulations that were ran on 01/01/2018. All of the HTML files generated can be found 
+                            <a href="https://www.youtube.com/" target="_blank">here</a></p>
+            </div>
+            <div class="jumbotron tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                    <p class="lead">Below is a list of all Arcane Simulations that were ran on 01/01/2018. All of the HTML files generated can be found 
+                        <a href="https://www.youtube.com/" target="_blank">here</a></p>
+            </div>
+        </div>
+
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
+</body>
+
 </html>
 
