--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <!-- Custom CSS-->
-    <link rel="stylesheet" href="Styles/mains.css">
+    <link rel="stylesheet" href="css/mains.css">
 
     <title>Amanda Smells</title>
 </head>
@@ -89,11 +89,9 @@
             </div>
             <div class="jumbotron tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
                     <p class="lead">Below is a list of all Arcane Simulations that were ran on 01/01/2018. All of the HTML files generated can be found 
-                        <a href="https://www.youtube.com/" target="_blank">here</a></p>
+                        <a href="https://www.youtube.com/" target="_blank">here</a></p>                 
             </div>
         </div>
-
-
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
