fixed stupid bottom border issue.
https://stackoverflow.com/questions/34527395/css-bootstrap-stop-hover-border-on-active-item

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <div class="jumbotron tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                     <p class="lead">Below is a list of all Fire Simulations that were ran on 01/01/2018. All of the HTML files generated can be found 
                             <a href="https://www.youtube.com/" target="_blank">here</a></p>
+                    <p class="lead">Please select the type of simulation you want to view:</p>
             </div>
             <div class="jumbotron tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                     <p class="lead">Below is a list of all Frost Simulations that were ran on 01/01/2018. All of the HTML files generated can be found 
