--- a/index.html
+++ b/index.html
@@ -1,39 +1,5 @@
-<!-- <!DOCTYPE html>
-<html>
-    <head>
-        <link href="styles/main.css" rel="stylesheet">
-        <title>Mage Theorycrafting</title>
-        <!-- Bootstrap.css
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    </head>
+<!DOCTYPE html>
 
-    <body>
-        <nav class="nav-main">
-            <div class="logo">Mage Theorycrafting</div>
-            <ul>
-                <li>
-                    <a href="#" class="nav-item">Fire</a>
-                    <div class="nav-content">
-                        <div class="nav-sub">
-                            <ul>
-                                <li><a href="#">Single</a></li>
-                                <li><a href="#">Two</a></li>
-                                <li><a href="#">Four</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </li>
-        </nav>
-        <div class="content">
-            This is a test
-        </div>
-    </body>
-</html> --!>
-
-<!doctype html>
-<html lang="en">
-
-<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -83,6 +49,7 @@
                     <p class="lead">Below is a list of all Fire Simulations that were ran on 01/01/2018. All of the HTML files generated can be found 
                             <a href="https://www.youtube.com/" target="_blank">here</a></p>
                     <p class="lead">Please select the type of simulation you want to view:</p>
+                    <button type="button" class="btn btn-light">Single Target</button> <button type="button" class="btn btn-light1">Two Target</button> <button type="button" class="btn btn-light1">Four Target</button>
             </div>
             <div class="jumbotron tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                     <p class="lead">Below is a list of all Frost Simulations that were ran on 01/01/2018. All of the HTML files generated can be found 
