More buttons added.
next is to add loaded information on button press.

--- a/index.html
+++ b/index.html
@@ -28,36 +28,37 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Fire</a>
+                        <a class="nav-link active" id="Fire-tab" data-toggle="tab" href="#Fire" role="tab" aria-controls="Fire" aria-selected="true">Fire</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Frost</a>
+                        <a class="nav-link" id="Frost-tab" data-toggle="tab" href="#Frost" role="tab" aria-controls="Frost" aria-selected="false">Frost</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Arcane</a>
+                        <a class="nav-link" id="Arcane-tab" data-toggle="tab" href="#Arcane" role="tab" aria-controls="Arcane" aria-selected="false">Arcane</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0 float-right">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
+                        <button class="Homebtn float-right"><i class="fa fa-Home" role="button" ></i><ahref=index.html></a>Home</button>
             </div>
         </nav>
 
         <div class="tab-content" id="myTabContent">
-            <div class="jumbotron tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <div class="jumbotron tab-pane fade show active" id="Fire" role="tabpanel" aria-labelledby="Fire-tab">
                     <p class="lead">Below is a list of all Fire Simulations that were ran on 01/01/2018. All of the HTML files generated can be found 
                             <a href="https://www.youtube.com/" target="_blank">here</a></p>
-                    <p class="lead">Please select the type of simulation you want to view:</p>
+                    <p class="lead">Please select the type of simulation you wish to view:</p>
                     <button type="button" class="btn btn-light">Single Target</button> <button type="button" class="btn btn-light1">Two Target</button> <button type="button" class="btn btn-light1">Four Target</button>
             </div>
-            <div class="jumbotron tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            <div class="jumbotron tab-pane fade" id="Frost" role="tabpanel" aria-labelledby="Frost-tab">
                     <p class="lead">Below is a list of all Frost Simulations that were ran on 01/01/2018. All of the HTML files generated can be found 
                             <a href="https://www.youtube.com/" target="_blank">here</a></p>
+                    <p class="lead">Please select the type of simulation you wish to view:</p>
+                            <button type="button" class="btn btn-light">Single Target</button> <button type="button" class="btn btn-light1">Two Target</button> <button type="button" class="btn btn-light1">Four Target</button>
             </div>
-            <div class="jumbotron tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+            <div class="jumbotron tab-pane fade" id="Arcane" role="tabpanel" aria-labelledby="Arcane-tab">
                     <p class="lead">Below is a list of all Arcane Simulations that were ran on 01/01/2018. All of the HTML files generated can be found 
-                        <a href="https://www.youtube.com/" target="_blank">here</a></p>                 
+                        <a href="https://www.youtube.com/" target="_blank">here</a></p>    
+                   <p class="lead">Please select the type of simulation you wish to view:</p>
+                        <button type="button" class="btn btn-light">Single Target</button> <button type="button" class="btn btn-light1">Two Target</button> <button type="button" class="btn btn-light1">Four Target</button>             
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
