Please help me Putro

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <!-- Target Button Code -->
                         <p><button type="button" class="btn btn-light">Single Target</button> <button type="button" class="btn btn-light">Two Target</button> <button type="button" class="btn btn-light">Four Target</button>
                     <div id="Fire" class="SimTypeButton"> <br> <br>
-                        <button type="button" class="btn FireTypeBtn">Talents</button> <button type="button" class="btn FireTypeBtn">Trinkets</button>
+                        <button type="button" class="btn FireTypeBtn" id="fireSTTalents">Talents</button> <button type="button" class="btn FireTypeBtn" id="fireSTTrinkets">Trinkets</button>
                     </div>
             </div>
             <!-- Frost Header / Button Code -->
