Added secondary buttons

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <a href="https://www.youtube.com/" target="_blank">here</a></p>
                     <p class="lead">Please select the type of simulation you wish to view:</p>
                         <!-- Target Button Code -->
-                        <p><button type="button" class="btn btn-light">Single Target</button> <button type="button" class="btn btn-light">Two Target</button> <button type="button" class="btn btn-light">Four Target</button>
+                        <p><button type="button" class="btn btn-light" id="fireSTBtn">Single Target</button> <button type="button" class="btn btn-light">Two Target</button> <button type="button" class="btn btn-light">Four Target</button>
                     <div id="Fire" class="SimTypeButton"> <br> <br>
                         <button type="button" class="btn FireTypeBtn" id="fireSTTalents">Talents</button> <button type="button" class="btn FireTypeBtn" id="fireSTTrinkets">Trinkets</button>
                     </div>
