--- a/index.html
+++ b/index.html
@@ -26,17 +26,6 @@
             </button>
             <!-- Nav Bar Div -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="nav nav-tabs" id="myTab" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" id="Fire-tab" data-toggle="tab" href="#Fire" role="tab" aria-controls="Fire" aria-selected="true">Fire</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="Frost-tab" data-toggle="tab" href="#Frost" role="tab" aria-controls="Frost" aria-selected="false">Frost</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="Arcane-tab" data-toggle="tab" href="#Arcane" role="tab" aria-controls="Arcane" aria-selected="false">Arcane</a>
-                    </li>
-                </ul>
                         <button class="Homebtn float-right"><i class="fa fa-Home" role="button" ></i><ahref=index.html></a>Home</button>
             </div>
         </nav>
@@ -44,32 +33,10 @@
         <div class="tab-content" id="myTabContent">
             <!-- Text Loader -->
             <div class="jumbotron tab-pane fade show active" id="Fire" role="tabpanel" aria-labelledby="Fire-tab">
-                    <p class="lead">Below is a list of all Fire Simulations that were ran on 01/01/2018. All of the HTML files generated can be found 
-                            <a href="https://www.youtube.com/" target="_blank">here</a></p>
-                    <p class="lead">Please select the type of simulation you wish to view:</p>
+                    <p class="lead">Welcome to my Theorycrating website. Here you can find a guide for Frost Mage as well as some simulation resourcses. 
+                        <p class="lead">Please select the content you wish to see.</p>
                         <!-- Target Button Code -->
-                        <p><button type="button" class="btn btn-light" id="fireSTBtn">Single Target</button> <button type="button" class="btn btn-light">Two Target</button> <button type="button" class="btn btn-light">Four Target</button>
-                    <div id="Fire" class="SimTypeButton"> <br> <br>
-                        <button type="button" class="btn FireTypeBtn" id="fireSTTalents">Talents</button> <button type="button" class="btn FireTypeBtn" id="fireSTTrinkets">Trinkets</button>
-                    </div>
-            </div>
-            <!-- Frost Header / Button Code -->
-            <!-- Text Loader -->
-            <div class="jumbotron tab-pane fade" id="Frost" role="tabpanel" aria-labelledby="Frost-tab">
-                    <p class="lead">Below is a list of all Frost Simulations that were ran on 01/01/2018. All of the HTML files generated can be found 
-                            <a href="https://www.youtube.com/" target="_blank">here</a></p>
-                    <p class="lead">Please select the type of simulation you wish to view:</p>
-                        <!-- Target Button Code -->
-                        <button type="button" class="btn btn-light">Single Target</button> <button type="button" class="btn btn-light">Two Target</button> <button type="button" class="btn btn-light">Four Target</button>
-            </div>
-            <!-- Arcane Header / Button Code -->
-            <!-- Text Loader -->
-            <div class="jumbotron tab-pane fade" id="Arcane" role="tabpanel" aria-labelledby="Arcane-tab">
-                    <p class="lead">Below is a list of all Arcane Simulations that were ran on 01/01/2018. All of the HTML files generated can be found 
-                        <a href="https://www.youtube.com/" target="_blank">here</a></p>    
-                   <p class="lead">Please select the type of simulation you wish to view:</p>
-                        <!-- Target Button Code -->
-                        <button type="button" class="btn btn-light">Single Target</button> <button type="button" class="btn btn-light">Two Target</button> <button type="button" class="btn btn-light">Four Target</button>             
+                        <p><button type="button" class="btn btn-light" id="fireSTBtn" href="Guide.html" target="_blank">Guide</button> <button type="button" class="btn btn-light">Simulations</button>
             </div>
         </div>
         <!-- JQuery script loads -->
@@ -79,8 +46,6 @@
             crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
-        <script src="js/ButtonLoad.js"></script>
 </body>
-
 </html>
 
